syntax = "proto3";

option go_package = "order-service/proto";

service OrderService {
    rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
}

message CreateOrderRequest {
    string user = 1;
}

message CreateOrderResponse {
    string message = 1;
}