syntax = "proto3";

option go_package = "user-service/proto";

service UserService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse) {}
    rpc GetUser(UserIdRequest) returns (GetUserResponse) {}
    rpc DeleteUser(UserIdRequest) returns (DeleteUserResponse) {}
}

message CreateUserRequest {
    string name = 1;
    string surname = 2;
}

message CreateUserResponse {
    string message = 1;
}

message UserIdRequest {
    string id = 1;
}

message GetUserResponse {
    string message = 1;
}

message DeleteUserResponse {
    string message = 1;
}
